added a json response for take photo and some bugfixes

--- a/camera.conf
+++ b/camera.conf
@@ -1,5 +1,5 @@
 [CameraConf]
 resolution_x = 2592
 resolution_y = 1944
-directory = /mnt/pycamera/static
+directory = /mnt/Raspi-IR-Camera/static
 wait_recording = 30
